--- a/package.json
+++ b/package.json
@@ -45,23 +45,36 @@
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
     "base-64": "^0.1.0",
+    "body-parser": "^1.15.1",
     "bootstrap": "^3.3.5",
     "bootstrap-social": "^4.9.1",
     "bundle-loader": "^0.5.4",
     "classnames": "^2.2.0",
+    "cookie-parser": "^1.4.2",
     "css-loader": "^0.18.0",
     "express": "^4.12.3",
+    "express-less": "0.0.8",
+    "express-less-middleware": "^1.4.5",
+    "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "flux": "^2.1.1",
     "font-awesome": "^4.4.0",
+    "grant-express": "^3.6.2",
+    "instagram-node": "^0.5.8",
     "jquery": "^2.1.4",
     "lazy": "^1.0.11",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
+    "mocha": "^2.4.5",
+    "mongoose": "^4.4.19",
+    "morgan": "^1.7.0",
     "node-sass": "^3.4.1",
     "normalizr": "^1.1.0",
     "nprogress": "^0.2.0",
+    "passport": "^0.3.2",
+    "passport-instagram": "^1.0.0",
+    "path": "^0.12.7",
     "postcss-loader": "^0.6.0",
     "postcss-nested": "^1.0.0",
     "react": "^0.13.3",
@@ -70,7 +83,9 @@
     "react-router": "^0.13.3",
     "reflux": "^0.2.12",
     "resource-api-utils": "^1.0.0",
+    "serve-favicon": "^2.3.0",
     "style-loader": "^0.12.3",
+    "swig": "^1.4.2",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.1"
   }
