--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-modal": "^0.5.0",
     "react-router": "^0.13.3",
     "reflux": "^0.2.12",
+    "request-promise": "^3.0.0",
     "resource-api-utils": "^1.0.0",
     "serve-favicon": "^2.3.0",
     "style-loader": "^0.12.3",
